[package]
name = "tuna-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bullpen = "0.1.5"
clap = { version = "4.4.10", features = ["derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
itertools = "0.12.0"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.34.0"
